--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,92 @@
 /* Write your CSS here! */
+
+body {
+    background-color: rgba(57, 96, 141, 0.473);
+    margin: 8px;
+    display: block;
+    /* background-color: rgb(152, 167, 157); */
+    /* background-color: rgb(152, 167, 157); */
+  }
+    /* title - Vision Board */
+    #mainHeading {
+        font-size: 70px;
+        font-weight: 200;
+        font-variant: small-caps;
+        color: rgb(255, 255, 255);
+        margin-bottom: 80px;
+
+        /* border */
+        border-bottom: 10px solid rgb(100, 48, 160);
+      
+    }
+    /* heading centered */
+    h1, h3 {
+        text-align: center;  
+    }
+    /* heading color */
+    h3 {
+        color: rgb(0, 0, 0);
+        font-size: 30px;
+    }
+    /* heading centered */
+    h4 {
+        text-align: center;  
+        text-transform: uppercase;
+        font-style: italic;
+        color: rgb(100, 48, 160);
+    }
+    /* Goal 2 paragraph */
+    .funParagraph {
+        color: green;
+    }
+    /* paragraphs */
+    p {
+        text-align: center; 
+        margin-top: 45px;
+        margin-bottom: 20px;
+        margin-left: 350px;
+        margin-right: 350px;
+    }
+    /* all images */
+    img {
+        width: 600px;
+        border: 4px solid #111416;
+        border-radius: 40px;
+    
+    
+        align-items: center;
+    
+        margin-right: 400px;
+        margin-left: 400px;
+        margin-bottom: 70px;
+        
+        padding-top: 5px;
+        padding-bottom: 5px;
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+    /* apple imac images(2) */
+    .column {
+        /* width: 600px; */
+            box-sizing: border-box;
+            float: left;
+            width: 50%;
+    }
+    .row::after {
+        content: "";
+        clear: both;
+        display: table;
+    }
+
+        /* unused code ideas */
+/* 
+    #appleimage {
+        display: inline-block;
+        width: 600px; */
+        /* margin: auto; */
+        /* align-items:center; */
+        /* margin-top: 30px;
+        margin-bottom: 30px; */
+        /* margin-right: 200px;
+        margin-left: 200px; */
+        /* padding: auto;
