--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,6 @@ body {
     background-color: rgba(57, 96, 141, 0.473);
     margin: 8px;
     display: block;
-    /* background-color: rgb(152, 167, 157); */
-    /* background-color: rgb(152, 167, 157); */
   }
     /* title - Vision Board */
     #mainHeading {
@@ -17,7 +15,6 @@ body {
 
         /* border */
         border-bottom: 10px solid rgb(100, 48, 160);
-      
     }
     /* heading centered */
     h1, h3 {
@@ -53,11 +50,10 @@ body {
         border: 4px solid #111416;
         border-radius: 40px;
     
-    
         align-items: center;
     
-        margin-right: 400px;
-        margin-left: 400px;
+        margin-right: 600px;
+        margin-left: 600px;
         margin-bottom: 70px;
         
         padding-top: 5px;
@@ -66,9 +62,9 @@ body {
         padding-right: 5px;
     }
     /* apple imac images(2) */
-    .column {
+    /* .column {
         /* width: 600px; */
-            box-sizing: border-box;
+            /* box-sizing: border-box;
             float: left;
             width: 50%;
     }
@@ -76,7 +72,7 @@ body {
         content: "";
         clear: both;
         display: table;
-    }
+    /* } */
 
         /* unused code ideas */
 /* 
