--- a/styles.css
+++ b/styles.css
@@ -50,17 +50,51 @@ body {
         border: 4px solid #111416;
         border-radius: 40px;
     
-        align-items: center;
+        /* align-items: center; */
     
-        margin-right: 600px;
-        margin-left: 600px;
+        /* margin-right: 400px;
+        margin-left: 400px;
         margin-bottom: 70px;
-        
+         */
         padding-top: 5px;
         padding-bottom: 5px;
         padding-left: 5px;
         padding-right: 5px;
     }
+
+
+    .row {
+        display: flex;
+        
+    }
+
+    .column {
+        /* margin: auto; */
+        flex: 50%;
+        padding: 5px;
+        margin: 60px;
+    }
+
+
+    /* * {
+        box-sizing: border-box;
+    }
+
+    .column {
+        float: left;
+        width: 33.33%;
+        padding: 5px;
+    }
+
+    .row::after {
+        content: "";
+        clear: both;
+        display: table;
+    } */
+
+
+
+    
     /* apple imac images(2) */
     /* .column {
         /* width: 600px; */
