--- a/styles.css
+++ b/styles.css
@@ -52,27 +52,34 @@ body {
     
         /* align-items: center; */
     
-        /* margin-right: 400px;
-        margin-left: 400px;
-        margin-bottom: 70px;
-         */
+        
         padding-top: 5px;
         padding-bottom: 5px;
         padding-left: 5px;
         padding-right: 5px;
     }
+    /* centering images */
+    .images {
+        margin-right: 400px;
+        margin-left: 400px;
+        margin-bottom: 70px;
+        
+    }
 
-
+    /* Apple computer imac images */
     .row {
         display: flex;
         
     }
 
     .column {
-        /* margin: auto; */
+       
+        margin-right: 40px;
+        margin-left: 40px;
+        /* align-items: center; */
         flex: 50%;
-        padding: 5px;
-        margin: 60px;
+        /* padding: 90px; */
+        /* margin: 20px; */
     }
 
 
