--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,11 @@ body {
         /* border */
         border-bottom: 10px solid rgb(100, 48, 160);
     }
+
+    /* #page-wrap {
+        width: 600px;
+        margin: 0 auto; */
+    /* } */
     /* heading centered */
     h1, h3 {
         text-align: center;  
@@ -46,13 +51,10 @@ body {
     }
     /* all images */
     img {
+        display: block;
         width: 600px;
         border: 4px solid #111416;
         border-radius: 40px;
-    
-        /* align-items: center; */
-    
-        
         padding-top: 5px;
         padding-bottom: 5px;
         padding-left: 5px;
@@ -60,8 +62,8 @@ body {
     }
     /* centering images */
     .images {
-        margin-right: 400px;
-        margin-left: 400px;
+        margin-right: auto;
+        margin-left: auto;
         margin-bottom: 70px;
         
     }
